# aidlctest

./: .gitmodules  pyproject.toml
aidlc-docs/: aidlc-state.md  audit.md
aidlc-docs/designdomain/: README.md
aidlc-docs/designdomain/concepts/: Model Inference Engine.md  Model Inference Server.md  model-inference-engine.md  model-inference-server.md
aidlc-docs/designdomain/technologies/: apple-mlx.md  cactus.md  executorch.md  lemonade-server.md  nvidia-nim.md  privatemode-pattern.md  sglang.md  tensorrt-llm.md  unsloth.md  vllm.md
aidlc-docs/inception/application-design/: application-design.md  architecture-addendum-review-questions.md  changelog.md  component-dependency.md  component-methods.md  components.md  hybrid-approach-diagram.mmd  hybrid-inference-architecture-addendum.md  judge-vllm-clarification-questions.md  services.md  unsloth-executorch-research.md  unsloth-phone-reuse-extraction.md
aidlc-docs/inception/plans/: application-design-plan.md  execution-plan.md  flowchart TD.mmd  kotlin-acceptance-stack-blueprint.md  story-generation-plan.md  (+1 more)
code/.devcontainer/: Dockerfile  devcontainer.json
code/unsloth_example_1/: CHANGELOG.md  pyproject.toml
code/unsloth_example_1/.devcontainer/: DEVCONTAINER_DESIGN.md  Dockerfile  devcontainer.json  setup.sh
code/unsloth_example_1/dagger/: README.md  dagger.json
code/unsloth_example_1/dagger/src/: main.py
code/unsloth_example_1/tests/: conftest.py  test_model_quality.py
code/unsloth_example_1/training/: EVALUATIONS.md  README.md  RUNPOD_EVAL_WORKFLOW.md  evaluate_model.py  export_executorch.sh  qwen3_phone_deployment.py
training/: README.md  evaluate_model.py  qwen3_phone_deployment.py
(+9 files in other folders)
