[project]
name = "qwen3-phone-deployment"
version = "0.1.0"
description = "Qwen3-0.6B QAT training pipeline for phone deployment via Unsloth + ExecuTorch"
readme = "training/README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "unsloth",
    "transformers==4.57.3",
    "trl==0.25.1",
    "torchao==0.14.0",
    "optimum==1.24.0",
    "executorch",
    "pytorch-tokenizers",
    "datasets==4.3.0",
    "huggingface_hub>=0.34.0",
    "hf_transfer",
    "sentencepiece",
    "protobuf",
    "pandas",
]

[dependency-groups]
dev = [
    "marimo",
    "deepeval",
    "pytest>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Build byproducts → /buildcache (never in the project workspace)
[tool.pytest.ini_options]
cache_dir = "/buildcache/pytest"

[tool.ruff]
cache-dir = "/buildcache/ruff"

[tool.mypy]
cache_dir = "/buildcache/mypy"
